# txt2epub

./: .gitignore  README.md  README.zh.md  pyproject.toml
txt2epub/: __init__.py  __main__.py  gui.py  txt2epub.py  txt2epub_gui.py  utils.py
