[project]
name = "txt2epub"
description = "A simple TXT to EPUB converter"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-only" }
keywords = [
  "ebook",
]
authors = [{ name = "K4YT3X", email = "i@k4yt3x.com" }]
classifiers = [
  "Environment :: Console",
  "Environment :: X11 Applications :: Qt",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "langdetect>=1.0.0",
    "ebooklib>=0.18",
    "PyQt6>=6.5.0",
    "pillow>=10.4.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/k4yt3x/txt2epub/"

[project.scripts]
txt2epub = "txt2epub.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "txt2epub/__init__.py"

[tool.isort]
profile = "black"
